@@ -6,6 +6,7 @@ import WordPressShared
 import React
 import AutomatticTracks
 import Combine
+import ImagePlayground
 
 class GutenbergViewController: UIViewController, PostEditor, FeaturedImageDelegate, PublishingEditor {
     let errorDomain: String = "GutenbergViewController.errorDomain"
@@ -613,6 +614,8 @@ extension GutenbergViewController: GutenbergBridgeDelegate {
             externalMediaPicker.presentStockPhotoPicker(origin: self, post: post, multipleSelection: allowMultipleSelection, callback: callback)
         case .tenor:
             externalMediaPicker.presentTenorPicker(origin: self, post: post, multipleSelection: allowMultipleSelection, callback: callback)
+        case .imagePlayground:
+            externalMediaPicker.presentImagePlayground(origin: self, post: post, callback: callback)
         case .otherApps, .allFiles:
             filesAppMediaPicker.presentPicker(origin: self, filters: filter, allowedTypesOnBlog: post.blog.allowedTypeIdentifiers, multipleSelection: allowMultipleSelection, callback: callback)
         default: break
@@ -1132,10 +1135,11 @@ extension GutenbergViewController: GutenbergBridgeDataSource {
     func gutenbergMediaSources() -> [Gutenberg.MediaSource] {
         post.managedObjectContext?.performAndWait {
             [
+                MediaPickerMenu.isImagePlaygroundAvailable ? .imagePlayground : nil,
                 post.blog.supports(.stockPhotos) ? .stockPhotos : nil,
                 post.blog.supports(.tenor) ? .tenor : nil,
                 .otherApps,
-                .allFiles,
+                .allFiles
             ].compactMap { $0 }
         } ?? []
     }
@@ -1293,6 +1297,7 @@ extension GutenbergViewController: PostEditorNavigationBarManagerDelegate {
 extension Gutenberg.MediaSource {
     static let stockPhotos = Gutenberg.MediaSource(id: "wpios-stock-photo-library", label: .freePhotosLibrary, types: [.image])
     static let otherApps = Gutenberg.MediaSource(id: "wpios-other-files", label: .otherApps, types: [.image, .video, .audio, .other])
+    static let imagePlayground = Gutenberg.MediaSource(id: "wpios-image-playground", label: MediaPickerMenu.imagePlaygroundLocalizedTitle, types: [.image])
     static let allFiles = Gutenberg.MediaSource(id: "wpios-all-files", label: .otherApps, types: [.any])
     static let tenor = Gutenberg.MediaSource(id: "wpios-tenor", label: .tenor, types: [.image])
 }
