@@ -3,8 +3,10 @@
 
 25.6
 -----
+* [**] Add Image Playground support (part of Apple Intelligence suite) for adding images to your posts, generated featured image, site icons, and more [#23688]
 * [**] Enhance the Gravatar Quick Editor by adding features that allow users to delete and share their avatars. [#23868]
 * [**] Add the capability to create an avatar using Apple Image Playground through the Gravatar Quick Editor. [#23868]
+* [*] [internal] Update Gravatar SDK to 3.0.0 [#23701]
 * [*] Use the Gravatar Quick Editor to update the avatar [#23729]
 * [*] (Hidden under a feature flag) User Management for self-hosted sites. [#23768]
 * [*] Add URL and ID to the Media details screen, add IDs for posts [#23887]
